import java.util.ArrayList;
import java.util.Iterator;

/**
 * Represents an author in the system, responsible for creating shows and podcasts.
 * Each author has a name and lists of shows and podcasts they have created.
 *
 * @author Gonçalo Domingos and João Domingues
 */
public class AuthorImpl implements Author {
    private final String name;
    private final ArrayList<Show> shows;
    private final ArrayList<Podcast> podcasts;

    public AuthorImpl(String name) {
        this.name = name;
        this.shows = new ArrayList<>();
        this.podcasts = new ArrayList<>();
    }

    @Override
    public String getName() {
        return name;
    }

    @Override
    public int getProductivity() {
        return shows.size() + podcasts.size();
    }

    @Override
    public void addShow(Show show) {
        shows.add(show);
    }

    @Override
    public void addPodcast(Podcast podcast) {
        podcasts.add(podcast);
    }

    @Override
    public Iterator<Podcast> getPodcasts() {
        return podcasts.iterator();
    }

    @Override
    public void removeShow(Show show) {
        shows.remove(show);
    }

    @Override
    public void removePodcast(Podcast podcast) {
        podcasts.remove(podcast);
    }

    @Override
    public Iterator<Show> getShows() {
        return shows.iterator();
    }
}