@startuml
!pragma graphviz_dpi 72
skinparam dpi 72
scale 0.55
skinparam monochrome true
skinparam defaultFontSize 7
skinparam class {
    BackgroundColor white
    BorderColor black
    BorderThickness 0.3
    FontColor black
    AttributeFontSize 6
    FontSize 7
}
skinparam interface {
    BackgroundColor white
    BorderColor black
    FontColor black
}
skinparam componentStyle uml2
skinparam classAttributeIconSize 0
skinparam backgroundColor white

interface StreamingPlatform {
    + hasVideo(String): boolean
    + hasPublishableVideo(String): boolean
    + hasPodcastEpisode(String): boolean
    + isPremiumVideo(String): boolean
    + hasPodcast(String): boolean
    + hasShow(String): boolean
    + isValidLanguageCode(String): boolean
    + isVideoUsedInShow(String): boolean
    + isValidEpisodeDate(String, String): boolean
    + hasAuthorPodcasts(String): boolean
    + hasProductiveAuthors(): boolean
    + hasAuthorShows(String): boolean
    + isTitleTaggedWith(String, String): boolean
    + addPublishableVideo(String,int,String,String,String,String): void
    + addPremiumVideo(String,int,String,String,String,String,String,String): void
    + addSubtitle(String,String,String): void
    + removeVideo(String): void
    + addPodcast(String,String,String): void
    + addPodcastEpisode(String,String,int,String,String): void
    + removePodcast(String): void
    + addShow(String,String,String): void
    + removeShow(String): void
    + addTagToTitle(String,String): void
    + removeTagFromTitle(String,String): void
    + getVideo(String): PublishableVideo
    + getSubtitles(String): Iterator
    + getPodcast(String): Podcast
    + getPodcastEpisodes(String): Iterator
    + getAuthorPodcasts(String): Iterator
    + getAuthorShows(String): Iterator
    + getShow(String): Show
    + getAuthorsByProductivity(): Iterator
    + getTaggedContent(String,String,String): Iterator
}

interface Video {
    + getVideoID(): String
    + getTitle(): String
    + getVideoDuration(): int
}

interface PublishableVideo {
    + getUrl(): String
    + getPublisher(): String
    + getLanguageCode(): String
}

interface PremiumVideo {
    + addSubtitle(Subtitle): void
    + getSubtitles(): Iterator
}

interface PodcastEpisode {
    + getUrl(): String
    + getDate(): String
}

interface Podcast {
    + getTitle(): String
    + getAuthor(): String
    + getLanguageCode(): String
    + addEpisode(PodcastEpisode): void
    + getEpisodes(): Iterator
    + hasEpisodes(): boolean
    + getLatestEpisode(): PodcastEpisode
    + addTag(String): void
    + removeTag(String): void
    + hasTag(String): boolean
    + getTags(): Iterator
    + hasTags(): boolean
}

interface Show {
    + getVideoID(): String
    + getDate(): String
    + getTitle(): String
    + getAuthor(): String
    + addTag(String): void
    + removeTag(String): void
    + hasTag(String): boolean
    + getTags(): Iterator
    + hasTags(): boolean
}

interface TaggableContent {
    + getTitle(): String
    + getAuthor(): String
    + addTag(String): void
    + removeTag(String): void
    + hasTag(String): boolean
    + getTags(): Iterator
    + hasTags(): boolean
}

interface Author {
    + getName(): String
    + getProductivity(): int
    + addShow(Show): void
    + addPodcast(Podcast): void
    + getPodcasts(): Iterator
    + getShows(): Iterator
    + removeShow(Show): void
    + removePodcast(Podcast): void
}

class StreamingPlatformImpl {
    - Map publishableVideos
    - Map podcasts
    - Map shows
    - Map authorsMap
    + StreamingPlatformImpl()
    - findPublishableVideo(String): PublishableVideo
    - findPodcast(String): Podcast
    - findShow(String): Show
    - getOrCreateAuthor(String): Author
}

abstract class AbstractVideoImpl {
    - String videoID
    - String title
    - int videoDuration
    + AbstractVideoImpl(String, String, int)
    + getVideoID(): String
    + getTitle(): String
    + getVideoDuration(): int
}

class PublishableVideoImpl {
    - String url
    - String publisher
    - String language
    + PublishableVideoImpl(...)
    + getUrl(): String
    + getPublisher(): String
    + getLanguageCode(): String
}

class PremiumVideoImpl {
    - List subtitles
    + PremiumVideoImpl(...)
    + addSubtitle(Subtitle): void
    + getSubtitles(): Iterator
}

class PodcastEpisodeImpl {
    - String url
    - String date
    + PodcastEpisodeImpl(...)
    + getUrl(): String
    + getDate(): String
}

class PodcastImpl {
    - String title
    - String author
    - String languageCode
    - List episodes
    - Set tags
    + PodcastImpl(String, String, String)
    + getTitle(): String
    + getAuthor(): String
    + getLanguageCode(): String
    + addEpisode(PodcastEpisode): void
    + getEpisodes(): Iterator
    + hasEpisodes(): boolean
    + getLatestEpisode(): PodcastEpisode
    + addTag(String): void
    + removeTag(String): void
    + hasTag(String): boolean
    + getTags(): Iterator
    + hasTags(): boolean
}

class ShowImpl {
    - String author
    - String title
    - String videoID
    - String date
    - Set tags
    + ShowImpl(String, String, String, String)
    + getVideoID(): String
    + getDate(): String
    + getTitle(): String
    + getAuthor(): String
    + addTag(String): void
    + removeTag(String): void
    + hasTag(String): boolean
    + getTags(): Iterator
    + hasTags(): boolean
}

class SubtitleImpl {
    - String subtitleUrl
    - String subtitleLanguage
    + SubtitleImpl(String, String)
    + getSubtitleUrl(): String
    + getSubtitleLanguage(): String
}

class AuthorImpl {
    - String name
    - List shows
    - List podcasts
    + AuthorImpl(String)
    + getName(): String
    + getProductivity(): int
    + addShow(Show): void
    + addPodcast(Podcast): void
    + getPodcasts(): Iterator
    + getShows(): Iterator
    + removeShow(Show): void
    + removePodcast(Podcast): void
}

abstract class AbstractTaggableContent {
    - String title
    - String author
    - Set tags
    + AbstractTaggableContent(String, String)
    + getTitle(): String
    + getAuthor(): String
    + addTag(String): void
    + removeTag(String): void
    + hasTag(String): boolean
    + getTags(): Iterator
    + hasTags(): boolean
}

class Main {
    + main(String[])
    + runProgram(Scanner, StreamingPlatform)
}

Video <|.. AbstractVideoImpl
PublishableVideo <|.. PublishableVideoImpl
PremiumVideo <|.. PremiumVideoImpl
PodcastEpisode <|.. PodcastEpisodeImpl
Podcast <|.. PodcastImpl
Show <|.. ShowImpl
TaggableContent <|.. AbstractTaggableContent
AbstractTaggableContent <|-- PodcastImpl
AbstractTaggableContent <|-- ShowImpl
Author <|.. AuthorImpl
StreamingPlatform <|.. StreamingPlatformImpl

AbstractVideoImpl <|-- PublishableVideoImpl
AbstractVideoImpl <|-- PodcastEpisodeImpl
PublishableVideoImpl <|-- PremiumVideoImpl

StreamingPlatformImpl o-- PublishableVideo
StreamingPlatformImpl o-- Podcast
StreamingPlatformImpl o-- Show
StreamingPlatformImpl o-- Author
PodcastImpl o-- PodcastEpisode
PremiumVideoImpl o-- SubtitleImpl

Main --> StreamingPlatform

@enduml